fix de l'alignement des logos reseaux

--- a/public/contact_css/contact.scss
+++ b/public/contact_css/contact.scss
@@ -35,19 +35,19 @@ $btnColor: #58cc73;
     z-index: 1;
   }
   
-  ul li a .icon {
+ .main_reseau li a .icon {
     position: relative;
     color: #262626;
     transition: .5s;
     z-index: 3;
   }
   
-  ul li a:hover .icon {
+ .main_reseau li a:hover .icon {
     color: #fff;
     transform: rotateY(360deg);
   }
   
-  ul li a:before {
+ .main_reseau li a:before {
     content: "";
     position: absolute;
     top: 100%;
@@ -59,23 +59,23 @@ $btnColor: #58cc73;
     z-index: 2;
   }
   
-  ul li a:hover:before {
+ .main_reseau li a:hover:before {
     top: 0;
   }
   
-  ul li:nth-child(1) a:before{
+ .main_reseau li:nth-child(1) a:before{
     background: #3b5999;
   }
   
-  ul li:nth-child(2) a:before{
+ .main_reseau li:nth-child(2) a:before{
     background: #55acee;
   }
   
-  ul li:nth-child(3) a:before {
+ .main_reseau li:nth-child(3) a:before {
     background: #0077b5;
   }
   
-  ul li:nth-child(4) a:before {
+ .main_reseau li:nth-child(4) a:before {
     background: #dd4b39;
   }
 
